# NH3

./: .env.example  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606240001_create_core_data_models.py
backend/app/: initial_data.py  main.py
backend/app/api/v1/: actions.py  ai_analysis.py  auth.py  dashboard.py  notifications.py  pipelines.py  risk_events.py  router.py  sensors.py  telemetry.py  ws.py
backend/app/core/: config.py  database.py  rbac.py  response.py  security.py  websocket.py
backend/app/models/: __init__.py  assets.py  base.py  iam.py  monitoring.py  telemetry.py
backend/app/schemas/: actions.py  ai_analysis.py  assets.py  auth.py  common.py  notifications.py  pipelines.py  risk_events.py  sensors.py  telemetry.py
backend/app/services/: ai_analysis_service.py  auth_service.py  notification_service.py
docs/: ai-underground-pipeline-monitoring-mvp-design.md
frontend/: next-env.d.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pipelines/: page.tsx
frontend/src/app/sensors/: page.tsx
frontend/src/components/dashboard/: ai-risk-panel.tsx  dashboard-map.tsx  dashboard-sidebar.tsx  dashboard-state.tsx  kpi-cards.tsx  (+4 more)
frontend/src/hooks/: use-dashboard-realtime.ts
frontend/src/stores/: auth-store.ts
frontend/src/types/: common.ts  dashboard.ts  domain.ts
(+12 files in other folders)
