[project]
name = "nh3-backend"
version = "0.1.0"
description = "AI underground pipeline monitoring MVP backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "geoalchemy2>=0.16.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "ruff>=0.8.3"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
